--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission
@@ -13,6 +14,7 @@
         android:maxSdkVersion="32" />
 
     <application
+        android:name=".TalkyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
