--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:maxSdkVersion="32" />
 
     <application
-        android:name=".TalkyApp"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:name=".viewmodels.TalkyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
